[package]
name = "rem-constraint"
authors = ["VERSE Lab <https://verse-lab.github.io>", "Matthew Britton <matt.britton@anu.edu.au"]
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Utilities for Rusty Extraction Maestro"
repository = "https://github.com/RuleBrittonica/rem-constraint.git" # Forked from: "https://github.com/verse-lab/rustic-cat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.80", features=["extra-traits", "full", "visit", "fold", "visit-mut", "printing", "parsing"]}
proc-macro2 = "1.0"
quote = "1.0"
nom = {version="7.1.0"}
mktemp = {version="0.4.1"}
itertools = "0.10.5"
env_logger = "0.11.5"
log = "0.4.17"
rem-utils = "0.1.4"

[[bin]]
name = "main"
path = "src/main.rs"

[package.metadata.rust-analyzer]
rustc_private=true
